Opened 9 years ago

Closed 9 years ago

#12683 closed bug (fixed)

[BTabView] bottom border is missing with plain font size > 12

Reported by: diver Owned by: jscipione
Priority: normal Milestone: R1
Component: Kits/Interface Kit Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

hrev50148.

This is an old regression, about a year old or so.

Setting plain font size to 13 or greater makes bottom tab border disappear.

Attachments (1)

tabview_no_bottom_border.png (4.5 KB ) - added by diver 9 years ago.

Download all attachments as: .zip

Change History (3)

by diver, 9 years ago

comment:1 by jscipione, 9 years ago

Owner: changed from axeld to jscipione
Status: newassigned

comment:2 by jscipione, 9 years ago

Resolution: fixed
Status: assignedclosed

Fixed in hrev50269

Note: See TracTickets for help on using tickets.